Mockup the week days

--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -1,3 +1,48 @@
 <template name="Home">
-  <h1>Find me in app/client/templates/home/home</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 text-right">
+        <small>WEEK 15.MAR - 21.MAR</small>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-3">
+        Add
+      </div>
+      <div class="col-sm-1 day-prev text-center">
+        <span class="lead glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+      </div>
+      <div class="col-sm-1 day-nav text-center">
+        <strong>SUN</strong><br>
+        <small>0.0h</small>
+      </div>
+      <div class="col-sm-1 day-nav text-center">
+        <strong>MON</strong><br>
+        <small>0.0h</small>
+      </div>
+      <div class="col-sm-1 day-nav text-center">
+        <strong>TUE</strong><br>
+        <small>0.0h</small>
+      </div>
+      <div class="col-sm-1 day-nav text-center">
+        <strong>WED</strong><br>
+        <small>0.0h</small>
+      </div>
+      <div class="col-sm-1 day-nav text-center">
+        <strong>THU</strong><br>
+        <small>0.0h</small>
+      </div>
+      <div class="col-sm-1 day-nav text-center">
+        <strong>FRI</strong><br>
+        <small>0.0h</small>
+      </div>
+      <div class="col-sm-1 day-nav text-center">
+        <strong>SAT</strong><br>
+        <small>0.0h</small>
+      </div>
+      <div class="col-sm-1 day-next text-center">
+        <span class="lead glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+      </div>
+    </div>
+  </div>
 </template>
