Commit some previous mockups

--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -2,46 +2,100 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12 text-right">
-        <small>WEEK 15.MAR - 21.MAR</small>
+        <small>WEEK 15.MAR - 21.MAR</small><br>
+        <strong>TOTAL: 10.35h</strong>
       </div>
     </div>
+
     <div class="row">
-      <div class="col-sm-3">
-        Add
+      <div class="col-sm-1 task-new">
+        <span class="lead glyphicon glyphicon-plus" aria-hidden="true"></span>
+      </div>
+      <div class="col-sm-2">
       </div>
       <div class="col-sm-1 day-prev text-center">
         <span class="lead glyphicon glyphicon-menu-left" aria-hidden="true"></span>
       </div>
       <div class="col-sm-1 day-nav text-center">
         <strong>SUN</strong><br>
-        <small>0.0h</small>
+        <small>7.50h</small>
       </div>
       <div class="col-sm-1 day-nav text-center">
         <strong>MON</strong><br>
-        <small>0.0h</small>
+        <small>2.85h</small>
       </div>
       <div class="col-sm-1 day-nav text-center">
         <strong>TUE</strong><br>
-        <small>0.0h</small>
+        <small>0.00h</small>
       </div>
       <div class="col-sm-1 day-nav text-center">
         <strong>WED</strong><br>
-        <small>0.0h</small>
+        <small>0.00h</small>
       </div>
       <div class="col-sm-1 day-nav text-center">
         <strong>THU</strong><br>
-        <small>0.0h</small>
+        <small>0.00h</small>
       </div>
       <div class="col-sm-1 day-nav text-center">
         <strong>FRI</strong><br>
-        <small>0.0h</small>
+        <small>0.00h</small>
       </div>
       <div class="col-sm-1 day-nav text-center">
         <strong>SAT</strong><br>
-        <small>0.0h</small>
+        <small>0.00h</small>
       </div>
       <div class="col-sm-1 day-next text-center">
         <span class="lead glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-9 pull-right well" style="margin-top: 20px; background-color: white; border-radius: 10px;">
+        <div class="col-xs-10">
+          <div class="lead">A very interesting coding task</div>
+          <div style="margin-top: -20px;">
+            <a href="#"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a> Project (Client),
+            <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a> Task (billable)
+          </div>
+        </div>
+        <div class="col-xs-2 text-right">
+          <div class="lead">0.00h</div>
+          <div style="margin-top: -20px;">
+            <a href="#"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Start</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-9 pull-right well" style="background-color: white; border-radius: 10px;">
+        <div class="col-xs-10">
+          <div class="lead">Another interesting design task</div>
+          <div style="margin-top: -20px;">
+            <a href="#"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a> Project (Client),
+            <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a> Task (billable)
+          </div>
+        </div>
+        <div class="col-xs-2 text-right">
+          <div class="lead text-danger">0.20h</div>
+          <div style="margin-top: -20px;">
+            <a href="#" class="text-danger"><span class="glyphicon glyphicon-stop" aria-hidden="true"></span> Stop</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-9 pull-right well" style="background-color: white; border-radius: 10px;">
+        <div class="col-xs-10">
+          <div class="lead">Yet another interesting administration task</div>
+          <div style="margin-top: -20px;">
+            <a href="#"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a> Project (Client),
+            <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a> Task (billable)
+          </div>
+        </div>
+        <div class="col-xs-2 text-right">
+          <div class="lead">0.00h</div>
+          <div style="margin-top: -20px;">
+            <a href="#"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Start</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
