--- a/app/client/stylesheets/main.less
+++ b/app/client/stylesheets/main.less
@@ -10,7 +10,8 @@ body {
   cursor: pointer; cursor: hand;
 }
 
-.day-nav:hover, .day-prev:hover, .day-next:hover {
+.day-nav:hover, .day-prev:hover, .day-next:hover,
+.task-new:hover {
   background-color: #f8f8f8;
 }
 
@@ -33,3 +34,13 @@ body {
   border-bottom-right-radius: 10px;
   cursor: pointer; cursor: hand;
 }
+
+.task-new {
+  background-color: #ffffff;
+  padding-top: 20px;
+  border: 1px solid #f0f0f0;
+  min-height: 75px;
+  border-radius: 10px;
+  cursor: pointer; cursor: hand;
+}
+
