--- a/app/client/templates/shared/main_menu/main_menu.html
+++ b/app/client/templates/shared/main_menu/main_menu.html
@@ -14,7 +14,7 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Dashboard</a></li>
+              <li class="active"><a href="#">Timesheets</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               {{> loginButtons}}
