Cleanup home.html

--- a/app/client/stylesheets/main.less
+++ b/app/client/stylesheets/main.less
@@ -44,3 +44,15 @@ body {
   cursor: pointer; cursor: hand;
 }
 
+.task-well {
+  background-color: white;
+  border-radius: 10px;
+}
+
+.task-second-line {
+  margin-top: -20px;
+}
+
+.spacer {
+  margin-top: 20px;
+}
