Display time in decimal format on task well

--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="col-xs-2 text-right">
-            <div class="lead">0.00h</div>
+            <div class="lead">{{timeInHours}}h</div>
             <div class="task-second-line">
               <a href="#"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Start</a>
             </div>
