Dynamic start/stop buttons

--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -65,7 +65,7 @@
           <div class="col-xs-2 text-right">
             <div class="lead">{{timeInHours}}h</div>
             <div class="task-second-line">
-              <a href="#"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Start</a>
+              <a href="#">{{{statusButton}}}</a>
             </div>
           </div>
         </div>
